Ensure that variant property references keep QObjects alive

Previously, only var property references could keep QObjects alive.
This meant that the garbage collector would collect QObject data
prematurely.

This commit ensures that variant properties keep QObjects alive as
required.

Task-number: QTBUG-24767
Change-Id: Ic98a06863251a3e7d6384ba9256810a78fb23406
Reviewed-by: Martin Jones <martin.jones@nokia.com>